tests/rosetta/out/Dart/averages-mean-time-of-day.error
run error: exit status 254
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:118:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:113:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:9:57: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
    var denom = double.parse((((2 * (n as num)) as num) * (((2 * (n as num) as num) + 1) as num)));
                                                        ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:11:24: Error: A value of type 'num' can't be assigned to a variable of type 'double'.
    sum = (sum as num) + (term as num);
                       ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:12:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    n = (n as num) + 1;
                   ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:22:70: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
    var denom = double.parse(((((2 * (n as num) as num) - 1) as num) * ((2 * (n as num)) as num)));
                                                                     ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:23:62: Error: A value of type 'double' can't be assigned to a variable of type 'int'.
    term = (((-(term as num) as num) * x as num) * x as num) / (denom as num);
                                                             ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:24:24: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    sum = (sum as num) + (term as num);
                       ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:25:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    n = (n as num) + 1;
                   ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:27:10: Error: A value of type 'int' can't be returned from a function with return type 'double'.
  return sum;
         ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:63:51: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
    if (digits.toString().substring(i, (i as num) + 1) == ch) {
                                                  ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:66:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:79:87: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
  return double.parse(((((((h as num) * 60 as num) + (m as num)) as num) * 60 as num) + (sec as num)));
                                                                                      ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:96:26: Error: A value of type 'double' can't be assigned to a variable of type 'int'.
    ssum = (ssum as num) + sinApprox(ang);
                         ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:97:26: Error: A value of type 'double' can't be assigned to a variable of type 'int'.
    csum = (csum as num) + cosApprox(ang);
                         ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:98:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:100:27: Error: The argument type 'int' can't be assigned to the parameter type 'double'.
  var theta = atan2Approx(ssum, csum);
                          ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:100:33: Error: The argument type 'int' can't be assigned to the parameter type 'double'.
  var theta = atan2Approx(ssum, csum);
                                ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:106:22: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
  var si = int.parse(total);
                     ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:107:34: Error: The argument type 'double' can't be assigned to the parameter type 'String'.
  var h = int.parse(((si as num) / 3600));
                                 ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:108:52: Error: The argument type 'double' can't be assigned to the parameter type 'String'.
  var m = int.parse(((((si as num) % 3600) as num) / 60));
                                                   ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:109:34: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
  var s = int.parse(((si as num) % 60));
                                 ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:119:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:143:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:172:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:177:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/averages-mean-time-of-day.dart:181:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
